[package]
name = "quic-test"
version = "0.1.0"
edition = "2021"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
lto = "fat"

# Limits the number of threads to 1 to improve the level of optimization that may be achieved
codegen-units = 1

# Debug info in release build, does not impact performance
debug = false

# Optimization level, maximizes performance
opt-level = 3

# Panic abort leads to smaller and faster executables
panic = "abort"

[dependencies]
# Asynchronous runtime
tokio = { version = "1.24.2", features = [ "rt", "rt-multi-thread", "net", "fs", "macros", "parking_lot", "io-util" ]}
futures-util = "0.3.25"

# Rust certificates
rustls = "0.20.8"

# Faster but optional allocator
mimalloc = { version = "0.1.26", default-features = false }

# Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "smallvec", "parking_lot" ] }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future"] }

# Network protocol
quinn = "0.9.3"

# Certificate generator
rcgen = "0.10.0"

# CLI argument parsing
clap = { version = "4.1.1", features = [ "derive" ] }

# Simple HTTP server for RR configuration
rouille = "3.6.1"

# HTTP request
reqwest = "0.11.14"
rustls-pemfile = "1.0.2"
anyhow = "1.0.68"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
